--- a/config/MapConfig.yaml
+++ b/config/MapConfig.yaml
@@ -1,92 +1,70 @@
 map_x: 10
 map_y: 10
 stats_x: 50
-wall_coordinates_v1:
-  0:
-  - 3
-  1:
-  - 3
-  - 7
-  - 8
-  - 9
-  2:
-  - 1
-  - 2
-  - 3
-  - 5
-  - 8
-  - 9
-  3:
-  - 5
-  4:
-  - 0
-  - 1
-  - 2
-  - 3
-  - 5
-  - 6
-  - 7
-  - 8
-  5:
-  - 1
-  - 3
-  6:
-  - 1
-  - 3
-  - 5
-  - 6
-  - 8
-  7:
-  - 5
-  - 6
-  - 8
-  8:
-  - 1
-  - 2
-  - 3
-  - 8
-  9:
-  - 3
-  - 5
-  - 6
-wall_coordinates_v2:
-  0:
-  - 3
-  - 4
-  - 5
-  1:
-  - 3
-  - 5
-  - 8
-  - 9
-  2:
-  - 1
-  - 2
-  - 3
-  - 5
-  3:
-  - 5
-  4:
-  - 5
-  - 6
-  - 7
-  - 8
-  5:
-  - 1
-  - 3
-  6:
-  - 1
-  - 2
-  - 3
-  - 5
-  - 6
-  - 8
-  7:
-  - 5
-  - 6
-  - 8
-  8:
-  - 3
-  9:
-  - 0
-  - 9
+wall_lists:
+- - - 3
+  - - 3
+    - 8
+    - 9
+  - - 1
+    - 2
+    - 3
+    - 5
+    - 8
+    - 9
+  - - 5
+  - - 0
+    - 1
+    - 2
+    - 3
+    - 5
+    - 6
+    - 7
+    - 8
+  - - 1
+    - 3
+  - - 1
+    - 3
+    - 5
+    - 6
+    - 8
+  - - 5
+    - 6
+    - 8
+  - - 1
+    - 2
+    - 3
+    - 8
+  - - 3
+    - 5
+    - 6
+- - - 3
+    - 4
+    - 5
+  - - 3
+    - 5
+    - 8
+    - 9
+  - - 1
+    - 2
+    - 3
+    - 5
+  - - 5
+  - - 5
+    - 6
+    - 7
+    - 8
+  - - 1
+    - 3
+  - - 1
+    - 2
+    - 3
+    - 5
+    - 6
+    - 8
+  - - 5
+    - 6
+    - 8
+  - - 3
+  - - 0
+    - 9
